--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(gtkDfEditSetDatasetName)
 export(gtkDfEditGetDatasetName)
 export(GetTaskPasteIn)
 export(dfedit)
+export(dfview)
 export(quick_message)
 S3method("[", GtkDfEdit)
 S3method("[<-", GtkDfEdit)
