--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,17 @@
 Package: RGtk2Extras
 Type: Package
 Title: Data frame editor and dialog making wrapper for RGtk2
-Version: 0.5.0
-Date: 2010-09-27
-Author: Tom Taverner, with contributions from John Verzani and Iago
-        Conde
-Maintainer: Tom Taverner <thomas.taverner@pnl.gov>
+Version: 0.6.1
+Date: 2012-09-26
+Author: Tom Taverner, with contributions from John Verzani, Iago Conde
+        and Liviu Andronic
+Maintainer: Tom Taverner <t.taverner@gmail.com>
 Description: Useful add-ons for RGtk2
-Depends: methods, RGtk2(>= 2.12.8), gWidgets, gWidgetsRGtk2
+Depends: methods, RGtk2(>= 2.12.8)
 Recommends: cairoDevice
+Suggests: gWidgetsRGtk2
 License: GPL (>= 2)
 LazyLoad: yes
-Packaged: 2010-10-09 00:24:56 UTC; D3X487
+Packaged: 2012-10-23 07:49:10 UTC; tom
 Repository: CRAN
-Date/Publication: 2010-10-09 07:29:31
+Date/Publication: 2012-10-23 09:46:22
